sdk/.metadata/.plugins/org.eclipse.cdt.ui/mb_hdmiball.build.log
17:31:33 **** Incremental Build of configuration Debug for project mb_hdmiball ****
make all 
'Building file: ../src/lw_usb/MAX3421E.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/lw_usb/MAX3421E.o" -IC:/Users/srira/OneDrive/Desktop/ECE385/ECE385-sanjits2_mzwu3/lab6_2_restart/sdk/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include -mno-xl-reorder -mlittle-endian -mxl-barrel-shift -mxl-pattern-compare -mcpu=v11.0 -mno-xl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/lw_usb/MAX3421E.d" -MT"src/lw_usb/MAX3421E.o" -o "src/lw_usb/MAX3421E.o" "../src/lw_usb/MAX3421E.c"
../src/lw_usb/MAX3421E.c:18:1: error: expected identifier or '(' before numeric constant
   18 | 112
      | ^~~
In file included from C:/Users/srira/OneDrive/Desktop/ECE385/ECE385-sanjits2_mzwu3/lab6_2_restart/sdk/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
../src/lw_usb/MAX3421E.c: In function 'SPI_init':
C:/Users/srira/OneDrive/Desktop/ECE385/ECE385-sanjits2_mzwu3/lab6_2_restart/sdk/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xstatus.h:44:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   44 | #define XST_DEVICE_NOT_FOUND            2L
      |                                         ^~
../src/lw_usb/MAX3421E.c:38:24: note: in expansion of macro 'XST_DEVICE_NOT_FOUND'
   38 |                 return XST_DEVICE_NOT_FOUND;
      |                        ^~~~~~~~~~~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
In file included from C:/Users/srira/OneDrive/Desktop/ECE385/ECE385-sanjits2_mzwu3/lab6_2_restart/sdk/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xspi.h:303,
                 from ../src/lw_usb/MAX3421E.c:14:
C:/Users/srira/OneDrive/Desktop/ECE385/ECE385-sanjits2_mzwu3/lab6_2_restart/sdk/mb_usb_hdmi_top/export/mb_usb_hdmi_top/sw/mb_usb_hdmi_top/standalone_microblaze_0/bspinclude/include/xstatus.h:43:41: warning: 'return' with a value, in function returning void [-Wreturn-type]
   43 | #define XST_FAILURE                     1L
      |                                         ^~
../src/lw_usb/MAX3421E.c:44:24: note: in expansion of macro 'XST_FAILURE'
   44 |                 return XST_FAILURE;
      |                        ^~~~~~~~~~~
../src/lw_usb/MAX3421E.c:32:6: note: declared here
   32 | void SPI_init() {
      |      ^~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MAX_busprobe':
../src/lw_usb/MAX3421E.c:233:21: error: 'usb_task_state' undeclared (first use in this function)
  233 |                 if (usb_task_state != USB_ATTACHED_SUBSTATE_WAIT_RESET_COMPLETE) { //bus reset causes connection detect interrupt
      |                     ^~~~~~~~~~~~~~
../src/lw_usb/MAX3421E.c:233:21: note: each undeclared identifier is reported only once for each function it appears in
../src/lw_usb/MAX3421E.c: In function 'MAX3421E_Task':
../src/lw_usb/MAX3421E.c:312:46: warning: suggest parentheses around comparison in operand of '&' [-Wparentheses]
  312 |         if (XGpio_DiscreteRead(&Gpio_int, 1) & 0x01 == 0) {
      |                                              ^
../src/lw_usb/MAX3421E.c: In function 'MaxIntHandler':
../src/lw_usb/MAX3421E.c:340:17: error: 'usb_task_state' undeclared (first use in this function)
  340 |                 usb_task_state++;                       //advance USB task state machine
      |                 ^~~~~~~~~~~~~~
../src/lw_usb/MAX3421E.c: In function 'MaxGpxHandler':
../src/lw_usb/MAX3421E.c:348:14: warning: variable 'GPINIRQ' set but not used [-Wunused-but-set-variable]
  348 |         BYTE GPINIRQ;
      |              ^~~~~~~
make: *** [src/lw_usb/subdir.mk:26: src/lw_usb/MAX3421E.o] Error 1

17:31:34 Build Finished (took 560ms)

